# Dream_Motif_Interpreter

./: .gitignore  GUIDE_RU.md  PLAYBOOK.md  README.md  Strategic_Report.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_deprecated_flag.py  003_seed_categories.py  004_fix_status_ck.py  005_add_fragments_default.py  006_add_hnsw_index.py  007_add_bot_sessions.py  008_add_voice_media_events.py  009_add_motif_inductions.py  010_add_research_results.py  011_add_feedback.py  012_add_parser_profile_fields.py  013_add_message_reactions.py  014_add_dream_notes.py
app/: __init__.py  main.py
app/api/: __init__.py  dreams.py  feedback.py  health.py  motifs.py  patterns.py  research.py  search.py  themes.py  versioning.py
app/assistant/: __init__.py  chat.py  facade.py  prompts.py  session.py  tools.py  voice_media.py
app/auto_sync/: __init__.py  __main__.py
app/llm/: client.py  grounder.py  theme_extractor.py
docs/: ARCHITECTURE.md  AUDIT_INDEX.md  AUTH_SECURITY.md  CODEX_PROMPT.md  DECISION_LOG.md  DEPLOY.md  ENVIRONMENT.md  EVIDENCE_INDEX.md  FEEDBACK_LOOP.md  IMPLEMENTATION_CONTRACT.md  IMPLEMENTATION_JOURNAL.md  IMPLEMENTATION_REFERENCE_MAP.md  MOTIF_ABSTRACTION.md  PHASE12_RELEASE_NOTES.md  PHASE_PLAN.md  PRODUCT_OVERVIEW.md  RESEARCH_AUGMENTATION.md  REVIEW_REPORT.md  RUNBOOK_TELEGRAM_BOT.md  RUNBOOK_VOICE_PIPELINE.md  SYSTEMD_SETUP.md  TELEGRAM_INTERACTION_MODEL.md  TESTING_STRATEGY.md  USER_GUIDE_RU.md  VOICE_PIPELINE.md  hooks_log.txt  retrieval_eval.md  spec.md  tasks.md  tasks_phase10.md  tasks_phase11.md  tasks_phase12.md  tasks_phase13.md  tasks_phase14.md  tasks_phase15.md  tasks_phase16.md  tasks_phase6.md  tasks_phase9.md
prompts/: ORCHESTRATOR.md  PHASE1_VALIDATOR.md  STRATEGIST.md
scripts/: eval.py  start_local_stack.sh  status_local_stack.sh  stop_local_stack.sh
templates/: ARCHITECTURE.md  CODEX_PROMPT.md  IMPLEMENTATION_CONTRACT.md  PROJECT_BRIEF.md  RETRIEVAL_EVAL.md
tests/: conftest.py
(+145 files in other folders)
