[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dream-motif-interpreter"
version = "0.1.0"
description = "Dream Motif Interpreter"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic-settings>=2.2",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "structlog>=24.1",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "redis>=5.0",
    "alembic>=1.13",
    "google-auth>=2.0",
    "google-auth-httplib2>=0.2",
    "google-api-python-client>=2.0",
    "tiktoken>=0.7",
    "python-telegram-bot>=21.0",
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<0.24",
    "httpx>=0.27",
    "ruff>=0.4,<1",
    "psycopg[binary]>=3.1",
    "pytest-postgresql>=8.0",
]

[tool.setuptools.packages.find]
include = ["app*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "preserve_gdocs_env: keep real Google Docs env vars for live integration checks",
    "preserve_openai_env: keep real OpenAI env vars for live integration checks",
]

[tool.ruff]
target-version = "py311"
line-length = 100
